--- a/packages/mdc-tabs/mdc-tabs.scss
+++ b/packages/mdc-tabs/mdc-tabs.scss
@@ -280,7 +280,7 @@ $_md-tabs-scroller-indicator-width: 48px;
 }
 
 .mdc-tabs-scroller--visible {
-  padding: 0 $_md-tabs-scroller-indicator-width;
+  //padding: 0 $_md-tabs-scroller-indicator-width;
 
   // .mdc-tabs-scroller__indicator {
   //   visibility: visible;
