--- a/packages/mdc-tabs/mdc-tabs.scss
+++ b/packages/mdc-tabs/mdc-tabs.scss
@@ -14,289 +14,6 @@
  * limitations under the License.
  */
 
-@import "@material/animation/functions";
-@import "@material/typography/mixins";
-@import "@material/theme/mixins";
-@import "@material/rtl/mixins";
-@import "./variables";
-@import "./mixins";
-
-// postcss-bem-linter: define tabs
-.mdc-tabs {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  height: 48px;
-  margin: 0 auto;
-  position: relative;
-  text-transform: uppercase;
-
-  &__indicator {
-    height: 2px;
-    width: 100%;
-
-    @include mdc-theme-prop(background-color, text-primary-on-light);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-    }
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform-origin: left top;
-    transition: mdc-animation-enter(transform, 240ms);
-    will-change: transform;
-    visibility: hidden;
-  }
-
-  // postcss-bem-linter: ignore
-  .mdc-toolbar & {
-    margin: 0 auto;
-
-    .mdc-tab {
-      @include mdc-theme-prop(color, text-secondary-on-primary);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(color, text-secondary-on-dark);
-      }
-    }
-
-    .mdc-tab--active,
-    .mdc-tab:hover {
-      @include mdc-theme-prop(color, text-primary-on-primary);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(color, text-primary-on-dark);
-      }
-    }
-
-    .mdc-tab::before,
-    .mdc-tab::after {
-      @include mdc-theme-prop(background-color, text-primary-on-primary);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-
-    // postcss-bem-linter: ignore
-    .mdc-tabs__indicator {
-      @include mdc-theme-prop(background-color, text-primary-on-primary);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-  }
-
-  @include mdc-rtl(".mdc-tabs") {
-    flex-direction: reverse-row;
-  }
-}
-
-.mdc-tabs--icons-with-text {
-  height: 72px;
-}
-
-.mdc-tabs--indicator-primary,
-.mdc-toolbar .mdc-tabs--indicator-primary {
-  .mdc-tabs__indicator {
-    @include mdc-theme-prop(background-color, primary);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-    }
-  }
-
-  &.mdc-tabs:not(.mdc-tabs-upgraded) .mdc-tab::after {
-    @include mdc-theme-prop(background-color, primary);
-  }
-}
-
-.mdc-tabs--indicator-accent,
-.mdc-toolbar .mdc-tabs--indicator-accent {
-  .mdc-tabs__indicator {
-    @include mdc-theme-prop(background-color, accent);
-  }
-
-  &.mdc-tabs:not(.mdc-tabs-upgraded) .mdc-tab::after {
-    @include mdc-theme-prop(background-color, accent);
-  }
-}
-
-// postcss-bem-linter: ignore
-.mdc-tab {
-  @include mdc-anchor-reset;
-  @include mdc-typography(body2);
-
-  box-sizing: border-box;
-  display: table-cell;
-  height: 100%;
-  min-width: 160px;
-  overflow: hidden;
-  padding: 0 24px;
-  text-align: center;
-  vertical-align: middle;
-
-  @include mdc-theme-prop(color, text-secondary-on-light);
-
-  @include mdc-theme-dark(".mdc-tabs") {
-    @include mdc-theme-prop(color, text-secondary-on-dark);
-  }
-
-  cursor: pointer;
-  white-space: nowrap;
-
-  @media screen and (max-width: 600px) {
-    min-width: 72px;
-    padding: 0 12px;
-  }
-
-  // postcss-bem-linter: ignore
-  &__icon {
-    @include mdc-icon-tab-content;
-
-    width: 24px;
-    height: 24px;
-
-    // postcss-bem-linter: ignore
-    .mdc-tabs--icons-with-text & {
-      margin-top: 4px;
-    }
-  }
-
-  &__icon-text {
-    @include mdc-icon-tab-content;
-  }
-
-  // postcss-bem-linter: ignore
-  &__icon + &__icon-text {
-    padding-top: 6px;
-  }
-}
-
-.mdc-tabs:not(.mdc-tabs-upgraded) .mdc-tab {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    left: 2px;
-    bottom: 2px;
-    content: "";
-    width: calc(100% - 4px);
-    height: 2px;
-    display: none;
-    pointer-events: none;
-
-    @include mdc-theme-prop(background-color, text-primary-on-light);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-    }
-
-    .mdc-toolbar & {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-  }
-
-  &--active,
-  &:active,
-  &:hover {
-    &::after {
-      display: initial;
-    }
-  }
-
-  &:not(.mdc-tab--active):hover::after {
-    opacity: .38;
-  }
-
-  &--active,
-  &:not(.mdc-tab--active):active::after {
-    opacity: .87;
-  }
-}
-
-.mdc-tab--active {
-  @include mdc-theme-prop(color, text-primary-on-light);
-
-  @include mdc-theme-dark(".mdc-tabs") {
-    @include mdc-theme-prop(color, text-primary-on-dark);
-  }
-}
-
-// postcss-bem-linter: define tabs-scroller
-.mdc-tabs-scroller {
-  display: flex;
-  box-sizing: border-box;
-  width: 100%;
-  overflow: hidden;
-  background-color: inherit;
-
-  &__scroll-frame {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    flex: 1;
-    overflow: hidden;
-
-    &__tabs {
-      transition: mdc-animation-enter(transform, 240ms);
-      will-change: transform;
-    }
-  }
-
-  &__indicator {
-    @include mdc-anchor-reset;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: $mdc-tabs-scroller-indicator-width;
-    height: 100%;
-
-    @include mdc-theme-prop(background-color, text-primary-on-dark);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      background-color: transparent;
-
-      @include mdc-theme-prop(color, text-primary-on-dark);
-    }
-
-    @include mdc-anchor-reset;
-
-    &__inner {
-      text-decoration: inherit;
-      cursor: inherit;
-      color: inherit;
-
-      &:focus {
-        outline-color: inherit;
-      }
-
-      @include mdc-rtl(".mdc-tabs") {
-        transform: rotate(180deg);
-      }
-    }
-
-    &__inner:hover {
-      color: inherit;
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(color, text-secondary-on-dark);
-      }
-    }
-  }
-
-  &__indicator--disabled {
-    opacity: 0;
-    pointer-events: none;
-  }
-}
-
-// postcss-bem-linter: end
+@import "./tab/mdc-tab";
+@import "./tabs/mdc-tabs";
+@import "./tabs-scroller/mdc-tabs-scroller";
