--- a/packages/mdc-tabs/tab/mdc-tab.scss
+++ b/packages/mdc-tabs/tab/mdc-tab.scss
@@ -1,18 +1,18 @@
-/**
-* Copyright 2017 Google Inc. All Rights Reserved.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*      http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
+//
+// Copyright 2017 Google Inc. All Rights Reserved.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//      http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
 
 @import "@material/animation/functions";
 @import "@material/typography/mixins";
@@ -45,20 +45,20 @@ $mdc-tabs-active-text-color: rgba(black, .87);
 // postcss-bem-linter: define tab
 .mdc-tab {
   @include mdc-ripple-base;
-  @include mdc-ripple-bg((pseudo: "::before"));
   @include mdc-ripple-fg((pseudo: "::after"));
+  @include mdc-ripple-bg((pseudo: "::before"));
   @include mdc-tabs-anchor-reset;
   @include mdc-typography(body2);
 
   position: relative;
   box-sizing: border-box;
-  display: table-cell;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   min-width: 160px;
   overflow: hidden;
   padding: 0 24px;
-  text-align: center;
-  vertical-align: middle;
 
   @include mdc-theme-prop(color, text-secondary-on-light);
 
@@ -69,9 +69,11 @@ $mdc-tabs-active-text-color: rgba(black, .87);
   cursor: pointer;
   white-space: nowrap;
 
+  // TODO: Replace with breakpoint variable
   @media screen and (max-width: 600px) {
     min-width: 72px;
     padding: 0 12px;
+    flex: 1;
   }
 
   // postcss-bem-linter: ignore
@@ -97,52 +99,6 @@ $mdc-tabs-active-text-color: rgba(black, .87);
   }
 }
 
-.mdc-tabs:not(.mdc-tabs-upgraded) .mdc-tab {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    left: 2px;
-    bottom: 2px;
-    content: "";
-    width: calc(100% - 4px);
-    height: 2px;
-    display: none;
-    pointer-events: none;
-
-    @include mdc-theme-prop(background-color, text-primary-on-light);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-    }
-
-    .mdc-toolbar & {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-
-      @include mdc-theme-dark(".mdc-tabs") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-  }
-
-  &--active,
-  &:active,
-  &:hover {
-    &::after {
-      display: initial;
-    }
-  }
-
-  &:not(.mdc-tab--active):hover::after {
-    opacity: .38;
-  }
-
-  &--active,
-  &:not(.mdc-tab--active):active::after {
-    opacity: .87;
-  }
-}
-
 .mdc-tab--active {
   border-bottom-width: 2px;
   border-bottom-style: solid;
@@ -152,46 +108,6 @@ $mdc-tabs-active-text-color: rgba(black, .87);
   @include mdc-theme-dark(".mdc-tabs") {
     @include mdc-theme-prop(color, text-primary-on-dark);
     @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-  }
-}
-
-.mdc-toolbar {
-  .mdc-tabs:not(.mdc-tabs-upgraded) > .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, text-primary-on-primary);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
-.mdc-toolbar.mdc-theme--accent-bg {
-  .mdc-tabs:not(.mdc-tabs-upgraded) > .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, primary);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
-.mdc-tabs:not(.mdc-tabs-upgraded).mdc-tabs--indicator-primary {
-  .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, primary);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
-.mdc-tabs:not(.mdc-tabs-upgraded).mdc-tabs--indicator-accent {
-  .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, accent);
-
-    @include mdc-theme-dark(".mdc-tabs") {
-      @include mdc-theme-prop(border-bottom-color, text-secondary-on-dark);
-    }
   }
 }
 
