--- a/packages/mdc-tabs/tabs/mdc-tabs.scss
+++ b/packages/mdc-tabs/tabs/mdc-tabs.scss
@@ -1,18 +1,18 @@
-/**
- * Copyright 2017 Google Inc. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+//
+// Copyright 2017 Google Inc. All Rights Reserved.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//      http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
 
 @import "@material/animation/functions";
 @import "@material/theme/mixins";
@@ -24,7 +24,6 @@
   justify-content: center;
   flex-direction: row;
   height: 48px;
-  margin: 0 auto;
   position: relative;
   text-transform: uppercase;
 
@@ -92,8 +91,104 @@
   }
 }
 
+.mdc-tabs:not(.mdc-tabs-upgraded) .mdc-tab {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
+    content: "";
+    width: calc(100% - 4px);
+    height: 2px;
+    display: none;
+    pointer-events: none;
+
+    @include mdc-theme-prop(background-color, text-primary-on-light);
+
+    @include mdc-theme-dark(".mdc-tabs") {
+      @include mdc-theme-prop(background-color, text-primary-on-dark);
+    }
+
+    .mdc-toolbar & {
+      @include mdc-theme-prop(background-color, text-primary-on-dark);
+
+      @include mdc-theme-dark(".mdc-tabs") {
+        @include mdc-theme-prop(background-color, text-primary-on-dark);
+      }
+    }
+  }
+
+  &--active,
+  &:active,
+  &:hover {
+    &::after {
+      display: initial;
+    }
+  }
+
+  &:not(.mdc-tab--active):hover::after {
+    opacity: .38;
+  }
+
+  &--active,
+  &:not(.mdc-tab--active):active::after {
+    opacity: .87;
+  }
+}
+
+.mdc-tabs:not(.mdc-tabs-upgraded).mdc-tabs--indicator-primary {
+  .mdc-tab--active {
+    @include mdc-theme-prop(border-bottom-color, primary);
+
+    @include mdc-theme-dark(".mdc-tabs") {
+      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
+    }
+  }
+}
+
+.mdc-tabs:not(.mdc-tabs-upgraded).mdc-tabs--indicator-accent {
+  .mdc-tab--active {
+    @include mdc-theme-prop(border-bottom-color, accent);
+
+    @include mdc-theme-dark(".mdc-tabs") {
+      @include mdc-theme-prop(border-bottom-color, text-secondary-on-dark);
+    }
+  }
+}
+
+.mdc-toolbar {
+  .mdc-tabs:not(.mdc-tabs-upgraded) > .mdc-tab--active {
+    @include mdc-theme-prop(border-bottom-color, text-primary-on-primary);
+
+    @include mdc-theme-dark(".mdc-tabs") {
+      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
+    }
+  }
+}
+
+.mdc-toolbar.mdc-theme--accent-bg {
+  .mdc-tabs:not(.mdc-tabs-upgraded) > .mdc-tab--active {
+    @include mdc-theme-prop(border-bottom-color, primary);
+
+    @include mdc-theme-dark(".mdc-tabs") {
+      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
+    }
+  }
+}
+
 .mdc-tabs--icons-with-text {
   height: 72px;
+
+  .mdc-tab {
+    flex-direction: column;
+  }
+}
+
+.mdc-toolbar .mdc-tabs .mdc-tab::before,
+.mdc-toolbar .mdc-tabs .mdc-tab::after {
+  @include mdc-theme-prop(background-color, text-hint-on-primary);
+  opacity: 0;
 }
 
 .mdc-tabs--indicator-primary,
