--- a/packages/mdc-tabs/tab-bar/mdc-tab-bar.scss
+++ b/packages/mdc-tabs/tab-bar/mdc-tab-bar.scss
@@ -20,10 +20,9 @@
 
 // postcss-bem-linter: define tab-bar
 .mdc-tab-bar {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
+  display: table;
   height: 48px;
+  margin: 0 auto;
   position: relative;
   text-transform: uppercase;
 
@@ -65,15 +64,6 @@
       }
     }
 
-    .mdc-tab::before,
-    .mdc-tab::after {
-      @include mdc-theme-prop(background-color, text-primary-on-primary);
-
-      @include mdc-theme-dark(".mdc-tab-bar") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-
     // postcss-bem-linter: ignore
     .mdc-tab-bar__indicator {
       @include mdc-theme-prop(background-color, text-primary-on-primary);
@@ -89,92 +79,6 @@
   }
 }
 
-.mdc-tab-bar:not(.mdc-tab-bar-upgraded) .mdc-tab {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    left: 2px;
-    bottom: 2px;
-    content: "";
-    width: calc(100% - 4px);
-    height: 2px;
-    display: none;
-    pointer-events: none;
-
-    @include mdc-theme-prop(background-color, text-primary-on-light);
-
-    @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-    }
-
-    .mdc-toolbar & {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
-
-      @include mdc-theme-dark(".mdc-tab-bar") {
-        @include mdc-theme-prop(background-color, text-primary-on-dark);
-      }
-    }
-  }
-
-  &--active,
-  &:active,
-  &:hover {
-    &::after {
-      display: initial;
-    }
-  }
-
-  &:not(.mdc-tab--active):hover::after {
-    opacity: .38;
-  }
-
-  &--active,
-  &:not(.mdc-tab--active):active::after {
-    opacity: .87;
-  }
-}
-
-.mdc-tab-bar:not(.mdc-tab-bar-upgraded).mdc-tab-bar--indicator-primary {
-  .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, primary);
-
-    @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
-.mdc-tab-bar:not(.mdc-tab-bar-upgraded).mdc-tab-bar--indicator-accent {
-  .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, accent);
-
-    @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(border-bottom-color, text-secondary-on-dark);
-    }
-  }
-}
-
-.mdc-toolbar {
-  .mdc-tab-bar:not(.mdc-tab-bar-upgraded) > .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, text-primary-on-primary);
-
-    @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
-.mdc-toolbar.mdc-theme--accent-bg {
-  .mdc-tab-bar:not(.mdc-tab-bar-upgraded) > .mdc-tab--active {
-    @include mdc-theme-prop(border-bottom-color, primary);
-
-    @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
-    }
-  }
-}
-
 .mdc-tab-bar--icons-with-text {
   height: 72px;
 
@@ -183,19 +87,13 @@
   }
 }
 
-.mdc-toolbar .mdc-tab-bar .mdc-tab::before,
-.mdc-toolbar .mdc-tab-bar .mdc-tab::after {
-  @include mdc-theme-prop(background-color, text-hint-on-primary);
-  opacity: 0;
-}
-
 .mdc-tab-bar--indicator-primary,
 .mdc-toolbar .mdc-tab-bar--indicator-primary {
   .mdc-tab-bar__indicator {
     @include mdc-theme-prop(background-color, primary);
 
     @include mdc-theme-dark(".mdc-tab-bar") {
-      @include mdc-theme-prop(background-color, text-primary-on-dark);
+      @include mdc-theme-prop(background-color, primary);
     }
   }
 
@@ -208,6 +106,10 @@
 .mdc-toolbar .mdc-tab-bar--indicator-accent {
   .mdc-tab-bar__indicator {
     @include mdc-theme-prop(background-color, accent);
+
+    @include mdc-theme-dark(".mdc-tab-bar") {
+      @include mdc-theme-prop(background-color, accent);
+    };
   }
 
   &.mdc-tab-bar:not(.mdc-tab-bar-upgraded) .mdc-tab::after {
