--- a/packages/mdc-tabs/tab/mdc-tab.scss
+++ b/packages/mdc-tabs/tab/mdc-tab.scss
@@ -30,8 +30,6 @@ $mdc-tabs-active-text-color: rgba(black, .87);
 
 @mixin mdc-tabs-anchor-reset {
   color: $mdc-tabs-text-color;
-  text-decoration: none;
-  cursor: pointer;
 
   &:hover {
     color: $mdc-tabs-active-text-color;
@@ -44,30 +42,42 @@ $mdc-tabs-active-text-color: rgba(black, .87);
 
 // postcss-bem-linter: define tab
 .mdc-tab {
-  @include mdc-ripple-base;
-  @include mdc-ripple-fg((pseudo: "::after"));
-  @include mdc-ripple-bg((pseudo: "::before"));
-  @include mdc-tabs-anchor-reset;
   @include mdc-typography(body2);
 
   position: relative;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
   height: 100%;
   min-width: 160px;
   overflow: hidden;
   padding: 0 24px;
+  text-decoration: none;
+  cursor: pointer;
+  white-space: nowrap;
 
   @include mdc-theme-prop(color, text-secondary-on-light);
 
-  @include mdc-theme-dark(".mdc-tabs") {
-    @include mdc-theme-prop(color, text-secondary-on-dark);
+  &:hover {
+    @include mdc-theme-prop(color, text-primary-on-light);
   }
 
-  cursor: pointer;
-  white-space: nowrap;
+  &:focus {
+    @include mdc-theme-prop(outline-color, text-secondary-on-light);
+  }
+
+  @include mdc-theme-dark(".mdc-tab-bar") {
+    @include mdc-theme-prop(color, text-secondary-on-dark);
+
+    &:hover {
+      @include mdc-theme-prop(color, text-primary-on-dark);
+    }
+
+    &:focus {
+      @include mdc-theme-prop(outline-color, text-secondary-on-dark);
+    }
+  }
 
   // TODO: Replace with breakpoint variable
   @media screen and (max-width: 600px) {
@@ -100,14 +110,65 @@ $mdc-tabs-active-text-color: rgba(black, .87);
 }
 
 .mdc-tab--active {
-  border-bottom-width: 2px;
-  border-bottom-style: solid;
   @include mdc-theme-prop(color, text-primary-on-light);
-  @include mdc-theme-prop(border-bottom-color, text-primary-on-light);
 
-  @include mdc-theme-dark(".mdc-tabs") {
+  @include mdc-theme-dark(".mdc-tab-bar") {
     @include mdc-theme-prop(color, text-primary-on-dark);
-    @include mdc-theme-prop(border-bottom-color, text-primary-on-dark);
+  }
+}
+
+.mdc-tab-bar:not(.mdc-tab-bar-upgraded) .mdc-tab {
+  position: relative;
+  &::after {
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
+    content: "";
+    width: calc(100% - 4px);
+    height: 2px;
+    display: none;
+    pointer-events: none;
+
+    @include mdc-theme-prop(background-color, text-primary-on-light);
+    @include mdc-theme-dark(".mdc-tab-bar", true) {
+      @include mdc-theme-prop(background-color, text-primary-on-dark);
+    }
+
+    // TODO: Use theme colors!
+    .mdc-toolbar & {
+      @include mdc-theme-prop(background-color, text-primary-on-primary);
+    }
+  }
+
+  &--active,
+  &:active,
+  &:hover {
+    &::after {
+      display: block;
+    }
+  }
+
+  &:not(.mdc-tab--active):hover::after {
+    opacity: .38;
+  }
+
+  &--active,
+  &:not(.mdc-tab--active):active::after {
+    opacity: .87;
+  }
+}
+
+.mdc-tab.mdc-ripple-upgraded {
+  @include mdc-ripple-base;
+  @include mdc-ripple-fg((pseudo: "::after"));
+  @include mdc-ripple-bg((pseudo: "::before"));
+  @include mdc-theme-dark(".mdc-tab-bar") {
+    @include mdc-ripple-bg((pseudo: "::before", base-color: white, opacity: .16));
+    @include mdc-ripple-fg((pseudo: "::after", base-color: white, opacity: .16));
+  }
+
+  &:focus {
+    outline: none;
   }
 }
 
